--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.4",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.0",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
